# msgproc

./: .envrc  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: coverage.yml  doc.yml  rust.yml
development/: .envrc  docker-compose.yaml
examples/: sample.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
implementors/actix/actor/: trait.Actor.js
msgproc/: all.html  index.html  sidebar-items.js
msgproc/consumer/: index.html  sidebar-items.js  trait.IConsumer.html
msgproc/msg/: index.html  sidebar-items.js  struct.Msg.html  struct.MsgProcessor.html
msgproc/msgproc/: index.html  sidebar-items.js  struct.MsgProc.html  struct.MsgProcConfig.html
msgproc/policy/: index.html  sidebar-items.js  struct.DefaultJobPolicy.html  trait.IJobPolicy.html
msgproc/prelude/: index.html  sidebar-items.js  struct.MsgProc.html  struct.MsgProcConfig.html  trait.IProcessor.html
msgproc/processor/: trait.IProcessor.html
scripts/: kafka-console
src/: consumer.rs  context.rs  error.rs  lib.rs  macros.rs  msg.rs  msgproc.rs  msgproc.rs.bak  options.rs  policy.rs  proc.rs  processor.rs
src.bak/: lib.rs  msgproc.rs
src/actors/: consume.rs  msg.rs  process.rs
src/internal/: consume.rs  mod.rs  msg.rs  process.rs  utils.rs
src/kafka/: alias.rs  config.rs  consumer.rs  key.rs  message.rs  mod.rs
src/msgproc/: consumer.rs.html  context.rs.html  error.rs.html  lib.rs.html  msg.rs.html  msgproc.rs.html  options.rs.html  policy.rs.html  processor.rs.html  tests.rs
src/proc/: tests.rs
tests/: common.rs  integration_test.rs
(+31 files in other folders)
