[package]
edition = "2021"
name = "msgproc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
anyhow = "1.0.56"
crossbeam = "0.8.1"
env_logger = "0.9.0"
log = "0.4.16"
rdkafka = "0.28.0"
regex = "1.5.5"
uuid = {version = "1.1.1", features = ["v4"]}
