[package]
edition = "2021"
name = "msgproc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
anyhow = "1.0.56"
async-trait = "0.1.57"
bytes = "1.2.1"
clap = {version = "3.1.10", features = ["derive"]}
crossbeam = "0.8.1"
env_logger = "0.9.0"
log = "0.4.16"
once_cell = "1.10.0"
rdkafka = "0.28.0"
regex = "1.5.5"
serde = "1.0.136"
serde_json = "1.0.79"
signal-hook = "0.3.13"
thiserror = "1.0.32"
tokio = {version = "1.20.1", features = ["rt-multi-thread", "macros", "rt", "sync"]}
tokio-stream = "0.1.9"
uuid = {version = "1.1.1", features = ["v4"]}
