[package]
edition = "2021"
name = "msgproc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.57"
bytes = "1.2.1"
log = "0.4.16"
rdkafka = "0.28.0"
thiserror = "1.0.32"
tokio = {version = "1.20.1", features = ["rt-multi-thread", "macros", "rt", "sync"]}
tokio-stream = "0.1.9"

[dev-dependencies]
env_logger = "0.9.0"
tokio = {version = "1.20.1", features = ["signal"]}
